<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/lin_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorCommonLine" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height48"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/iv_collect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:drawableLeft="@mipmap/ic_collect_false"
            android:drawablePadding="@dimen/common_height5"
            android:gravity="center_vertical"
            android:padding="@dimen/common_height10"
            android:paddingLeft="@dimen/common_height10"
            android:text="@string/shop_collection"
            android:textColor="@color/color333333"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/iv_collect"
            android:layout_toRightOf="@+id/iv_collect"
            android:drawableLeft="@mipmap/xi_shop_car"
            android:text="@string/shop_car"
            android:textColor="@color/color333333"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/bt_add_car"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/bt_buy"
            android:background="@color/colorFF5721"
            android:text="@string/shop_add_cart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_buy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/red"
            android:text="@string/shop_buy_atOnce"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>