<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/coordinatorLayout_Style"
    app:statusBarBackground="@drawable/bg_base_bar">

    <include layout="@layout/base_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/shouhuoren" />

            <EditText
                android:id="@+id/et_receiptName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_height5"
                android:background="@null"
                android:hint="@string/input_shouhu"
                android:textColor="@color/colorCommonText"
                android:textColorHint="@color/colorCommonHint"
                android:textSize="@dimen/common_size14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorCommonLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/contact_mobile" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_height5"
                android:background="@null"
                android:hint="@string/input_contact"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/colorCommonText"
                android:textColorHint="@color/colorCommonHint"
                android:textSize="@dimen/common_size14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorCommonLine" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorCommonLine" />

        <LinearLayout
            android:id="@+id/btn_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="onBtnClick"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/load_area" />

            <TextView
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_height5"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/input_area"
                android:textColor="@color/colorCommonText"
                android:textColorHint="@color/colorCommonHint" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_angle_right"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorCommonLine" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/white"-->
            <!--android:gravity="center_vertical"-->
            <!--android:minHeight="48dp"-->
            <!--android:padding="10dp">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="0.3"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/street" />-->

            <!---->
        <!--</LinearLayout>-->

        <EditText
            android:id="@+id/et_street"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gap_200"
            android:background="@color/white"
            android:hint="@string/input_street"
            android:textColor="@color/colorCommonText"
            android:textColorHint="@color/colorCommonHint"
            android:textSize="@dimen/common_size14"
            android:gravity="left|top"
            android:padding="@dimen/gap_5"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorCommonLine" />

        <include
            layout="@layout/include_activity_btn"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>